kubernetes/participant/templates/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: participant
spec:
  selector:
    app.kubernetes.io/name: demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
